fix page header image overflowing on mobile

--- a/_sass/layout/_page.scss
+++ b/_sass/layout/_page.scss
@@ -48,6 +48,7 @@ html,
   .page-header-image {
     display: block;
     margin: 0 auto;
+    max-width: 80vw;
   }
 }
 
